Add the new function: can restore all data and program states if the program is closed exceptionally.

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -2,3 +2,6 @@
 database.url=jdbc:mysql://127.0.0.1:3306/nokiasvsw3
 database.username=root
 database.password=nokia123
+
+#exclusion for seat prize
+seatprize.exclusion=7-ALL#15-ALL#55-ALL#56-ALL
